BAH-1556 | Refactor code
This commit replaces feed-integration-example references to
crater-atomfeed. It also removes unecessary dependencies.

Co-authored-by: Venu Vardhan Reddy Tekula <venuvardhan.t@beehyv.com>